--- a/src/components/StatsSection.module.css
+++ b/src/components/StatsSection.module.css
@@ -148,7 +148,7 @@
   position: relative;
   z-index: 1;
   margin: 0;
-  color: #475569;
+  color: #64748b;
   font-size: 14px;
   font-weight: 500;
   line-height: 1.5;
